@@ -878,8 +878,3 @@ O quiza que salte al menu con la linea de opcion seleccionada donde corresponde
 -cpu-history: soportar poder restaurar estado de cpu y estado paginacion, haciendo uso de linea MMU=
 
 -comentar desensamblado copion9
-
-ok-Soporte grabar snapshot zx81? .z81.
-agregar campo:
-[MEMORY]
-RAM_PACK 4k
