@@ -464,220 +464,3 @@ void save_z81_snapshot(char *filename)
 	fclose(ptr_z81_file);
 }
 
-/*
-int save_snap_z81(char *filename)
-{
-        FILE *f;
-        char *p;
-        int Addr, Count, Chr, puntero_memoria;
-
-        p=filename+strlen(filename)-4;
-
-        if (strcmp(p,".Z81") && strcmp(p,".z81")
-                && strcmp(p,".ace") && strcmp(p,".ACE") ) return(0);
-
-
-        if (!strcmp(p,".ace") || !strcmp(p,".ACE"))
-        {
-                f=fopen(filename,"wb");
-                if (!f) return(0);
-
-                puntero_memoria=0x2000;
-                memory[puntero_memoria]=0x01; memory[puntero_memoria+1]=0x80;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria=0x2080;
-                memory[puntero_memoria]=0x00; memory[puntero_memoria+1]=(zx81.RAMTOP+1)/256;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria=0x0284;
-                memory[puntero_memoria]=0x00; memory[puntero_memoria+1]=0x00;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria=0x0288;
-                memory[puntero_memoria]=0x00; memory[puntero_memoria+1]=0x00;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria=0x028c;
-                memory[puntero_memoria]=0x03; memory[puntero_memoria+1]=0x00;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria=0x0290;
-                memory[puntero_memoria]=0x03; memory[puntero_memoria+1]=0x00;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria=0x0294;
-                memory[puntero_memoria]=0xfd; memory[puntero_memoria+1]=0xfd;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria+=0x0298;
-                memory[puntero_memoria]=0x01; memory[puntero_memoria+1]=0x00;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria+=0x029c;
-                memory[puntero_memoria]=0x00; memory[puntero_memoria+1]=0x00;
-                memory[puntero_memoria+2]=0x00; memory[puntero_memoria+3]=0x00;
-
-                puntero_memoria=0x2100;
-
-                memory[puntero_memoria] = z80.af.b.l; memory[puntero_memoria+1] = z80.af.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.bc.b.l; memory[puntero_memoria+1] = z80.bc.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.de.b.l; memory[puntero_memoria+1] = z80.de.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.hl.b.l; memory[puntero_memoria+1] = z80.hl.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.ix.b.l; memory[puntero_memoria+1] = z80.ix.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.iy.b.l; memory[puntero_memoria+1] = z80.iy.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.sp.b.l; memory[puntero_memoria+1] = z80.sp.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.pc.b.l; memory[puntero_memoria+1] = z80.pc.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.af_.b.l; memory[puntero_memoria+1] = z80.af_.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.bc_.b.l; memory[puntero_memoria+1] = z80.bc.b.h ; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.de_.b.l; memory[puntero_memoria+1] = z80.de_.b.h; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.hl_.b.l; memory[puntero_memoria+1] = z80.hl_.b.h; puntero_memoria+=4;
-
-                memory[puntero_memoria] = z80.im ; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.iff1; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.iff2; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.i; puntero_memoria+=4;
-                memory[puntero_memoria] = z80.r;
-
-                Addr=0x2000;
-
-                while(Addr<32768)
-                {
-                        Chr=memory[Addr];
-                        Count=1;
-
-                        while((memory[Addr+Count]==Chr) && ((Addr+Count)<=32768))
-                                Count++;
-
-                        if (Count>240) Count=240;
-
-                        if (Count>3 || Chr==0xed)
-                        {
-                                fputc(0xed,f);
-                                fputc(Count,f);
-                        }
-                        else    Count=1;
-
-                        fputc(Chr,f);
-                        Addr+=Count;
-                }
-
-                fputc(0xed,f);
-                fputc(0x00,f);
-        }
-        else
-        {
-                f=fopen(filename,"wt");
-                if (!f) return(1);
-
-                fprintf(f,"[CPU]\n");
-                fprintf(f,"PC %04X    SP  %04X\n", z80.pc.w,z80.sp.w);
-                fprintf(f,"HL %04X    HL_ %04X\n", z80.hl.w,z80.hl_.w);
-                fprintf(f,"DE %04X    DE_ %04X\n", z80.de.w,z80.de_.w);
-                fprintf(f,"BC %04X    BC_ %04X\n", z80.bc.w,z80.bc_.w);
-                fprintf(f,"AF %04X    AF_ %04X\n", z80.af.w,z80.af_.w);
-                fprintf(f,"IX %04X    IY  %04X\n", z80.ix.w,z80.iy.w);
-                fprintf(f,"IR %04X\n", (z80.i<<8) | (z80.r7 & 128) | ((z80.r) & 127));
-
-                fprintf(f,"IM %02X      IF1 %02X\n", z80.im, z80.iff1);
-                fprintf(f,"HT %02X      IF2 %02X\n", z80.halted, z80.iff2);
-
-                fprintf(f,"\n[ZX81]\n");
-                fprintf(f,"NMI %02X     HSYNC %02X\n",
-                                NMI_generator, HSYNC_generator);
-                fprintf(f,"ROW %03X\n", rowcounter);
-
-                fprintf(f,"\n[MEMORY]\n");
-
-                fprintf(f,"MEMRANGE %04X %04X\n", zx81.ROMTOP+1, zx81.RAMTOP);
-
-                Addr=zx81.ROMTOP+1;
-
-                while(Addr<=zx81.RAMTOP)
-                {
-                        Chr=memory[Addr];
-                        Count=1;
-
-                        while((memory[Addr+Count]==Chr) && ((Addr+Count)<=zx81.RAMTOP))
-                                Count++;
-
-                        if (Count>1) fprintf(f,"*%04X %02X ",Count, Chr);
-                        else fprintf(f,"%02X ",Chr);
-
-                        Addr += Count;
-                }
-                fprintf(f,"\n\n[EOF]\n");
-        }
-        fclose(f);
-        return(0);
-}
-
-*/
-
-/*
-int memory_load(char *filename, int address, int length)
-{
-        int fptr;
-        char file[256];
-        int len;
-
-
-        if (strchr(filename, '\\') || strchr(filename, '/'))
-        {
-                strcpy(file, filename);
-        }
-        else
-        {
-                strcpy(file, zx81.cwd);
-                if (file[strlen(file)-1]!='\\') strcat(file,"\\");
-                strcat(file,"ROM\\");
-                strcat(file,filename);
-        }
-
-        fptr=open(file, O_RDONLY | O_BINARY);
-        if (fptr<1) return(errno);
-
-        if ((len=read(fptr, memory+address, length))==-1)
-        {
-                int err;
-
-                err=errno;
-                close(fptr);
-                return(err);
-        }
-
-        close(fptr);
-
-        return(len);
-}
-*/
-
-/*
-int font_load(char *filename, char *address, int length)
-{
-        int fptr;
-        char file[256];
-        int len;
-
-        strcpy(file, zx81.cwd);
-        if (file[strlen(file)-1]!='\\') strcat(file,"\\");
-        strcat(file,"ROM\\");
-        strcat(file,filename);
-
-        fptr=open(file, O_RDONLY | O_BINARY);
-        if (fptr<1) return(errno);
-
-        if ((len=read(fptr, address, length))==-1)
-        {
-                int err;
-
-                err=errno;
-                close(fptr);
-                return(err);
-        }
-
-        close(fptr);
-
-        return(len);
-}
-*/
