@@ -38,6 +38,7 @@ Allow autorewind setting for real tape too
 Allow to disable Spectrum colours on real video mode too
 Allow to press hotkeys at On Screen Keyboard
 Remember last path used on output tape
+Support MMU restore on ZRCP command "cpu-history restore" for Spectrum 128k/+2/+2a/+3
 
 Improved QL emulation:
 - Allow autoload when inserting QL mdv/flp
